force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/ARTL_EntityKey__c.field-meta.xml
<CustomField>
    <fullName>ARTL_EntityKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ARTL_Entity Key</label>
    <length>150</length>
    <type>Text</type>
</CustomField>