force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/ARTL_ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ProductPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>