force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/ARTL_RateSpecKey__c.field-meta.xml
<CustomField>
    <fullName>ARTL_RateSpecKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Spec Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>