force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/ARTL_Updated_Attributes__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Updated_Attributes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>